# C-OpenCV

./: README.md
chap6/: CMakeLists.txt
chap7/.kdev4/: chap7.kdev4
chap7/src/: main.cpp
chap8/: chap7.kdev4
dist_fish_eye/: CMakeLists.txt  chap7.kdev4
dist_fish_eye/.kdev4/: chap7.kdev4
dist_fish_eye/src/: main.cpp
